Fix spacing issue on contact pg

--- a/default.css
+++ b/default.css
@@ -44,6 +44,10 @@ p {
     clear: both;
 }
 
+br p {
+    clear: both;
+}
+
 footer{
     text-align: center;
     clear: both;
